# SFML-GLL-Sim

./: .gitignore  CMakeLists.txt  build.ps1  build.sh  changelog.md  modbus_config.txt  readme.md  run.bat
docs/: GLL_Documentation.md  changelog.md
samples/: SR-builtin.txt  SR-raw.txt  TOF_TON.txt  comparator_2bit.txt  decoder_2to4.txt  factory_io_Asssembler.gll  factory_io_a_to_b.gll  factory_io_a_to_b.txt  factory_io_pickNplace.txt  one_input_bit.gll
samples/tests/: AND.gll  CTD.gll  CTD_CV.gll  CTU.gll  CTU_CV.gll  NOT.gll  NS.gll  OR.gll  PS.gll  RS.gll  SR.gll  TOF.gll  TON.gll  XOR.gll  analog_comparators.gll  comparators.gll  test.txt
src/: AST.hpp  CountLC.ps1  Graph.cpp  Graph.hpp  ModbusManager.cpp  ModbusManager.hpp  Parser.cpp  Parser.hpp  Sim.cpp  Sim.hpp  Theme.hpp  TimeUtils.hpp  UI.cpp  UI.hpp  main.cpp
